--- a/test/testz.html
+++ b/test/testz.html
@@ -295,6 +295,4 @@ exploring new markets and fresh ways of working.</p>
 
 
 
-<div style="display: none; visibility: hidden;">
-<script type="text/javascript">var myDomain="eventbrite.co.uk",links=document.getElementsByTagName("a");Array.prototype.forEach.call(links,function(a){1<=a.href.indexOf(myDomain)&&(a.href+="?_eboga\x3d"+google_tag_manager["GTM-5SWNMH4"].macro(5))});</script>
-</div></body></html>
+</body></html>
