--- a/test/testb.html
+++ b/test/testb.html
@@ -119,7 +119,7 @@
                 <div class="col-sm-8 col-lg-4 header__image">
                     <a class="header__home" href="https://findbusinesssupport.gov.scot/">
                         <span class="sr-only">Homepage</span>
-                        <img src="Find_Business_Support_Test_files/logo.svg" class="header__logo" alt="Site logo">
+                        <img src="SE_Bellshill_5774-182.jpg" class="header__logo" alt="Site logo">
                     </a>
                 </div>
 
@@ -189,7 +189,7 @@ exploring new markets and fresh ways of working.</p>
                                     <span class="cta__text" data-hero="cta-text">
                                         Browse all 23 support services
                                     </span>
-                                    <div class="cta__icon">
+                                    <div class="cta__icon"> 
                                         <svg class="icon icon--cta-chevron-right" aria-hidden="true">
                                             <use xlink:href="/assets/images/symbols.svg#chevron"></use>
                                         </svg>
