--- a/test/testa.html
+++ b/test/testa.html
@@ -119,7 +119,7 @@
                 <div class="col-sm-8 col-lg-4 header__image">
                     <a class="header__home" href="https://findbusinesssupport.gov.scot/">
                         <span class="sr-only">Homepage</span>
-                        <img src="RadRed_5825-183.jpg" class="header__logo" alt="Site logo">
+                        <img src="Find_Business_Support_Test_files/logo.svg" class="header__logo" alt="Site logo">
                     </a>
                 </div>
 
