--- a/test/testb.html
+++ b/test/testb.html
@@ -164,13 +164,13 @@
 
             <picture class="responsive-image hero__image">
                 <!-- wide -->
-                <source media="(min-width: 1280px)" srcset="https://se-live-singleentrypoint-web.azureedge.net/remote.axd/se-live-singleentrypoint-storage.azureedge.net/media/1052/sep-homepage-image-compressed-1.jpg?width=1366&amp;height=700&amp;quality=70&amp;mode=crop&amp;crop=50,50,1366,400&amp;bgcolor=fff">
+                <source media="(min-width: 1280px)" srcset="SE_Bellshill_5774-182.jpg?width=1366&amp;height=700&amp;quality=70&amp;mode=crop&amp;crop=50,50,1366,400&amp;bgcolor=fff">
                 <!-- tablet -->
-                <source media="(min-width: 768px)" srcset="https://se-live-singleentrypoint-web.azureedge.net/remote.axd/se-live-singleentrypoint-storage.azureedge.net/media/1052/sep-homepage-image-compressed-1.jpg?width=1024&amp;height=700&amp;quality=70&amp;mode=crop&amp;crop=50,50,1024,420&amp;bgcolor=fff">
+                <source media="(min-width: 768px)" srcset="SE_Bellshill_5774-182.jpg?width=1024&amp;height=700&amp;quality=70&amp;mode=crop&amp;crop=50,50,1024,420&amp;bgcolor=fff">
                 <!-- mobile -->
-                <source media="(min-width: 414px)" srcset="https://se-live-singleentrypoint-web.azureedge.net/remote.axd/se-live-singleentrypoint-storage.azureedge.net/media/1051/sep-homepage-mobile-compressed-1.jpg?width=680&amp;height=680&amp;quality=70&amp;mode=crop&amp;crop=25,50,680,680&amp;bgcolor=fff">
+                <source media="(min-width: 414px)" srcset="SE_Bellshill_5774-182.jpg?width=680&amp;height=680&amp;quality=70&amp;mode=crop&amp;crop=25,50,680,680&amp;bgcolor=fff">
                 <!-- default -->
-                <img src="Find_Business_Support_Test_files/sep-homepage-mobile-compressed-1.jpg" alt="Find business support in Scotland" role="presentation">
+                <img src="SE_Bellshill_5774-182.jpg" alt="Find business support in Scotland" role="presentation">
             </picture>
 
             <div class="hero__content-wrapper">
