--- a/test/testa.html
+++ b/test/testa.html
@@ -170,7 +170,7 @@
                 <!-- mobile -->
                 <source media="(min-width: 414px)" srcset="RadRed_5825-183.jpg?width=680&amp;height=680&amp;quality=70&amp;mode=crop&amp;crop=25,50,680,680&amp;bgcolor=fff">
                 <!-- default -->
-                <img src="Find_Business_Support_Test_files/sep-homepage-mobile-compressed-1.jpg" alt="Find business support in Scotland" role="presentation">
+                <img src="RadRed_5825-183.jpg" alt="Find business support in Scotland" role="presentation">
             </picture>
 
             <div class="hero__content-wrapper">
