--- a/test/testb.html
+++ b/test/testb.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home | Business Support Scotland - Find Business Support</title>
+<title>Option B</title>
 
 <meta name="robots" content="NOFOLLOW, NOINDEX">
 <meta name="description" content="Need help growing your business? Get support for your company, from funding, training and advice to exploring new markets and fresh ways of working.">
