--- a/test/testa.html
+++ b/test/testa.html
@@ -181,7 +181,7 @@
 
             <div class="hero__content-wrapper">
                 <div class="container">
-                    <div class="hero__content">
+                    <div class="hero__content"   style=" background-color: #333333bb; border-radius: 5px;">
                         <div class="hero__text visible" data-hero="copy">
                             <h1 class="hero__title">Find business support in Scotland.</h1>
                                 <p class="hero__copy">Need help growing
