--- a/test/testXD.html
+++ b/test/testXD.html
@@ -7,9 +7,9 @@
 <H1>Please visit all 4 links and express your opinions and favourites</H1>
 <HR>
 <ul>
-<li><a href="Home–14-A.pdf">Option A</a></li>
-<li><a href="Home–15-B.pdf">Option B</a></li>
-<li><a href="Home–13-C.pdf">Option C</a></li>
+<li><a href="testaXD.html">Option A</a></li>
+<li><a href="testbXD.html">Option B</a></li>
+<li><a href="testcXD.html">Option C</a></li>
 </ul>
 
 
