--- a/test/test4.html
+++ b/test/test4.html
@@ -7,8 +7,8 @@
 <H1>Please visit both links and express your opinions and favourite</H1>
 <HR>
 <ul>
-<li><a href="testcXD.html">Option A</a></li>
-<li><a href="testc.html">Option B</a></li>
+<li><a href="testcXD.html" target="_blank">Option A</a></li>
+<li><a href="testc.html" target="_blank">Option B</a></li>
 </ul>
 
 
