--- a/SEPtimeline.html
+++ b/SEPtimeline.html
@@ -55,6 +55,8 @@
       <ul class="in_card">
         <li>- Address Lookup Issues</li>
         <li>- Trust issues around no phone number</li>
+        <li>- Low information density on search listings</li>
+        <li>- Search not returning partial matches</li>
         <li>- <a href="files/SEP-Usability-May-22.pptx" target="_blank">May 22nd Findings</a></li>
       </ul>
   </div>
@@ -74,7 +76,14 @@
         <li>- General layout benchmarking Usability Testing</li>
         <li>- Scored on Impressions, navigation, layout, information & general functionality</li>
         <li>- Enquiry Testing</li>
+      </ul>
+          <strong>Observations</strong>
+      
+      <ul class="in_card">
+        <li>- </li>
+        <li>- </li>
 
+        <li>- <a href="files/SEP-Usability-May-22.pptx" target="_blank">May 18th Findings</a></li>
       </ul>
       
     <!-- <img src="http://placehold.it/1000x500" alt="Graphic"> -->
