--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
 
-      <link rel="stylesheet" href="css/style.css?ver=2">
+      <link rel="stylesheet" href="css/SEPtimeline.css?ver=2">
 
 
 </head>
