--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -58,7 +58,7 @@
     <div class="number-box">
       <span>02</span>
     </div>
-    <h2><span class="small">15 May 2019</span>Research</h2>
+    <h2><span class="small">15 May 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -97,10 +97,10 @@
     <br><strong>Observations</strong>
       
       <ul class="in_card">
-        <li class="issue">- Address Lookup Issues</li>
-        <li class="issue">- Trust issues around no phone number</li>
-        <li class="issue">- Low information density on search listings</li>
-        <li class="issue">- Search not returning partial matches</li>
+        <li class="issue">- Issue: Address Lookup Issues</li>
+        <li class="issue">- Issue: Trust issues around no phone number</li>
+        <li class="issue">- Issue: Low information density on search listings</li>
+        <li class="issue">- Issue: Search not returning partial matches</li>
         <br>
         <li><a href="files/SEP-Usability-May-22.pptx" target="_blank">May 22nd Findings</a></li>
       </ul>
@@ -114,7 +114,7 @@
     <div class="number-box">
       <span>04</span>
     </div>
-    <h2><span class="small">27 May  2019</span>Research</h2>
+    <h2><span class="small">27 May  2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -141,7 +141,7 @@
     <div class="number-box">
       <span>05</span>
     </div>
-    <h2><span class="small">6 Aug 2019</span>Research</h2>
+    <h2><span class="small">6 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -168,7 +168,7 @@
     <div class="number-box">
       <span>06</span>
     </div>
-    <h2><span class="small">9 Aug 2019</span>Research</h2>
+    <h2><span class="small">9 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -195,7 +195,7 @@
     <div class="number-box">
       <span>07</span>
     </div>
-    <h2><span class="small">22 Aug 2019</span>Research</h2>
+    <h2><span class="small">22 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -222,7 +222,7 @@
     <div class="number-box">
       <span>08</span>
     </div>
-    <h2><span class="small">10 Sep 2019</span>Research</h2>
+    <h2><span class="small">10 Sep 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -249,7 +249,7 @@
     <div class="number-box">
       <span>09</span>
     </div>
-    <h2><span class="small">2 Oct 2019</span>Research</h2>
+    <h2><span class="small">2 Oct 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -275,7 +275,7 @@
     <div class="number-box">
       <span>10</span>
     </div>
-    <h2><span class="small">7 Oct 2019</span>Research</h2>
+    <h2><span class="small">7 Oct 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -301,7 +301,7 @@
     <div class="number-box">
       <span>11</span>
     </div>
-    <h2><span class="small">16-17 Oct 2019</span>Research</h2>
+    <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -328,7 +328,7 @@
     <div class="number-box">
       <span>12</span>
     </div>
-    <h2><span class="small">16-17 Oct 2019</span>Research</h2>
+    <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
