--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -8,15 +8,13 @@
 
 
       <link rel="stylesheet" href="css/SEPtimeline.css?ver=2">
-
-
 </head>
 
 <body>
-  <section id=timeline>
-	<h1>SEP Beta Research Timeline</h1>
-	<p class="leader">Newer activities at the top</p>
-	<div class="demo-card-wrapper">
+<section id=timeline>
+<h1>SEP Beta Research Timeline</h1>
+<p class="leader">Newer activities at the top</p>
+<div class="demo-card-wrapper">
 
 <!--
 <div class="demo-card demo-card--step4">
@@ -36,6 +34,7 @@
 </div>
 -->
 
+
 <!-- Initiation -->
     <div class="demo-card demo-card--step2">
       <div class="head">
@@ -46,6 +45,7 @@
       </div>
       <div class="body">
        <ul class="in_card">
+        <h3></h3>
         <li>SEP Beta phase started on 18th of April 2019</li>
       </ul>
       </div>
@@ -63,6 +63,7 @@
   <div class="body">
         <strong>Focus</strong>
        <ul class="in_card">
+        <h3></h3>
         <li>- General layout benchmarking Usability Testing</li>
         <li>- Scored on Impressions, navigation, layout, information & general functionality</li>
         <li>- Enquiry Testing</li>
@@ -86,23 +87,26 @@
     <div class="number-box">
       <span>03</span>
     </div>
-    <h2><span class="small">22 May 2019</span>Lab Research</h2>
+    <h2>
+        <span class="small">22 May 2019</span>
+        Lab Research 
+    </h2>
   </div>
   <div class="body">
+    <h3>My Account testing and finding out if Open Banking is understood in the Customer Base</h3>
     <strong>Focus</strong>
-      <ul class="in_card">
-        <li>- General Usability Testing</li>
+        <ul class="in_card">
+        <li>- General Usability Testing of My Account</li>
+        <li>- Opinion research on Accounts & Open Banking in general</li>
       </ul>
       
     <br><strong>Observations</strong>
       
       <ul class="in_card">
-        <li class="issue">- Issue: Address Lookup Issues</li>
-        <li class="issue">- Issue: Trust issues around no phone number</li>
-        <li class="issue">- Issue: Low information density on search listings</li>
-        <li class="issue">- Issue: Search not returning partial matches</li>
+        <li class="issue">- Issue: Account requirement can be a barrier at too early a stage</li>
+        <li class="issue">- Issue: Open Banking is largely unknown as a term</li>
         <br>
-        <li><a href="files/SEP-Usability-May-22.pptx" target="_blank">May 22nd Findings</a></li>
+        <li><a href="research/May_22_Research.pptx" target="_blank">May 22nd Findings</a></li>
       </ul>
   </div>
 </div>
@@ -134,6 +138,9 @@
   </div>
 </div>
 
+
+
+<!-- May_31_Research.pptx A11y improvements -->
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
@@ -393,6 +400,7 @@
     <h2><span class="small">30 Oct  2019</span>F2F Research at Event</h2>
   </div>
   <div class="body">
+    <h3>SEP Customer UAT</h3>
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- Customer UAT - End to End testing</li>
