SK - add some of the partners research from August

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -138,15 +138,70 @@
   </div>
 </div>
 
+<!--Research -->
+<div class="demo-card demo-card--step5">
+  <div class="head">
+    <div class="number-box">
+      <span>05</span>
+    </div>
+    <h2><span class="small">02 August 2019</span>Partners workshop</h2>
+  </div>
+  <div class="body">
+        <strong>Focus</strong>
+        <p>Workshop to set initial user needs for the partner portal and the enquiry handling</p>
+       <ul class="in_card">
+        <li>- services content management (partner portal)</li>
+        <li>- enquiry handling</li>
+      </ul>
+          <br>
+        <strong>Observations - Initial general needs</strong>
+      <ul class="in_card">
+        <li>- Login: remember me option</li>
+        <li>- Add, delete, edit content</li>
+        <li>- Automatic removal on a set date – automatic start too</li>
+        <li>- Some sense check content mechanisms before it goes live (Preview / QA)</li>
+        <li>- Use their own workflow processes to manage their own content (incl approve/reject, reasons for reject, etc)</li>
+        <li>- Partner collaboration: share product info, customer information </li>
+        <li>- Analytics, reporting, Key KPIs, Metric, Audit trails, GA</li>
+        <li>- View feedback from customers</li>
+        <li>- <a href="SEP-Partner-Prioritisation-020819-V1.xlsx" target="_blank"> Findings (Excel file)</a></li>
+      </ul>
+  </div>
+</div>
 
-
+<!--Research -->
+<div class="demo-card demo-card--step5">
+        <div class="head">
+          <div class="number-box">
+            <span>06</span>
+          </div>
+          <h2><span class="small">Week starting 05 August 2019</span>Partners interviews via Skype</h2>
+        </div>
+        <div class="body">
+              <strong>Focus</strong>
+              <p>Refine the initial findings from the initial workshop</p>
+             <ul class="in_card">
+              <li>- services content management (partner portal)</li>
+              <li>- enquiry handling</li>
+            </ul>
+                <br>
+              <strong>Refined needs</strong>
+              <p>They all want minimal disruption from their actual ways of working, so:</p>
+            <ul class="in_card">
+                <li>- enquiries direct in their CRM</li>
+                <li>- events in their event provider to be fetch via API and added to SEP automatically</li>
+                <li>- ideally no duplication of product content sources</li>
+                <li>- knowledge base was not really something they wanted to use, and were happy not to have access to it. They would just use the SEP  website as their knowledge base</li>
+            </ul>
+        </div>
+      </div>
 <!-- May_31_Research.pptx A11y improvements -->
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>05</span>
+      <span>07</span>
     </div>
     <h2><span class="small">6 Aug 2019</span>Online Research</h2>
   </div>
@@ -173,7 +228,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>06</span>
+      <span>08</span>
     </div>
     <h2><span class="small">9 Aug 2019</span>Online Research</h2>
   </div>
@@ -195,12 +250,37 @@
   </div>
 </div>
 
+ <!--Research -->
+<div class="demo-card demo-card--step5">
+        <div class="head">
+          <div class="number-box">
+            <span>09</span>
+          </div>
+          <h2><span class="small">Week starting 12 August 2019</span>Sense making and more interviews with partners</h2>
+        </div>
+        <div class="body">
+              <strong>Focus</strong>
+              <p>Playback our results for partners portal the wider team - technical interviews about enquiry handling</p>
+             <ul class="in_card">
+              <li>- services content management - sense making with the wider team and partners</li>
+              <li>- enquiry handling - more interviews with partners and EFRS</li>
+            </ul>
+                <br>
+              <strong>Refined needs</strong>
+              <p>The only thing we really need a portal for is to manage product content, reporting can be done  elsewhere and no time to build a KB from scratch so will use the existing knowledgebase</p>
+              <ul class="in_card">
+                <li>- --> decision to use Umbraco for product content management</li>
+                <li>- <a href="SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs (Excel file)</a></li>
+            </ul>
+        </div>
+      </div> 
+  
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>07</span>
+      <span>10</span>
     </div>
     <h2><span class="small">22 Aug 2019</span>Online Research</h2>
   </div>
