SK fix the links for files folder, need to go back up one level

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -74,7 +74,7 @@
         <li>- </li>
         <li>- </li>
         <br>
-        <li><a href="files/SEP-Usability-May-22.pptx" target="_blank">May 18th Findings</a></li>
+        <li><a href="../files/SEP-Usability-May-22.pptx" target="_blank">May 18th Findings</a></li>
       </ul>
       
     <!-- <img src="http://placehold.it/1000x500" alt="Graphic"> -->
@@ -133,7 +133,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -164,7 +164,7 @@
         <li>- Partner collaboration: share product info, customer information </li>
         <li>- Analytics, reporting, Key KPIs, Metric, Audit trails, GA</li>
         <li>- View feedback from customers</li>
-        <li>- <a href="files/SEP-Partner-Prioritisation-020819-V1.xlsx" target="_blank"> Findings (Excel file)</a></li>
+        <li>- <a href="../files/SEP-Partner-Prioritisation-020819-V1.xlsx" target="_blank"> Findings (Excel file)</a></li>
       </ul>
   </div>
 </div>
@@ -218,7 +218,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -245,7 +245,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href=../"files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -270,7 +270,7 @@
               <p>The only thing we really need a portal for is to manage product content, reporting can be done  elsewhere and no time to build a KB from scratch so will use the existing knowledgebase</p>
               <ul class="in_card">
                 <li>- --> decision to use Umbraco for product content management</li>
-                <li>- <a href="files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs (Excel file)</a></li>
+                <li>- <a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs (Excel file)</a></li>
             </ul>
         </div>
       </div> 
@@ -297,7 +297,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -324,7 +324,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -351,7 +351,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -377,7 +377,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -403,7 +403,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -430,7 +430,7 @@
         <li>- </li>
         <li>- </li>
 
-        <li><a href="files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
+        <li><a href="../files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
       </ul>
   </div>
 </div>
@@ -465,7 +465,7 @@
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
         <li>- </li>        
 
-        <li><a href="files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
+        <li><a href="../files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
       </ul>
   </div>
 </div>
@@ -496,7 +496,7 @@
         <li>- The site is viewed as being similar to GOV.UK and customers "Get it"</li>
         <li>- Email text is too stuffy. It is what could be expected from Government, but represents the kind of email that people routinely delete on site. </li>
         <br>
-        <li><a href="files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
+        <li><a href="../files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
       </ul>
   </div>
 </div>
