SK add more partners sessions

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -150,8 +150,8 @@
         <strong>Focus</strong>
         <p>Workshop to set initial user needs for the partner portal and the enquiry handling</p>
        <ul class="in_card">
-        <li>- services content management (partner portal)</li>
-        <li>- enquiry handling</li>
+        <li>- Services content management (partner portal)</li>
+        <li>- Enquiry handling</li>
       </ul>
           <br>
         <strong>Observations - Initial general needs</strong>
@@ -181,17 +181,17 @@
               <strong>Focus</strong>
               <p>Refine the initial findings from the initial workshop</p>
              <ul class="in_card">
-              <li>- services content management (partner portal)</li>
-              <li>- enquiry handling</li>
+              <li>- Services content management (partner portal)</li>
+              <li>- Enquiry handling</li>
             </ul>
                 <br>
               <strong>Refined needs</strong>
               <p>They all want minimal disruption from their actual ways of working, so:</p>
             <ul class="in_card">
-                <li>- enquiries direct in their CRM</li>
-                <li>- events in their event provider to be fetch via API and added to SEP automatically</li>
-                <li>- ideally no duplication of product content sources</li>
-                <li>- knowledge base was not really something they wanted to use, and were happy not to have access to it. They would just use the SEP  website as their knowledge base</li>
+                <li>- Enquiries direct in their CRM</li>
+                <li>- Events in their event provider to be fetch via API and added to SEP automatically</li>
+                <li>- Ideally no duplication of product content sources</li>
+                <li>- Knowledge base was not really something they wanted to use, and were happy not to have access to it. They would just use the SEP  website as their knowledge base</li>
             </ul>
         </div>
       </div>
@@ -267,10 +267,11 @@
             </ul>
                 <br>
               <strong>Refined needs</strong>
-              <p>The only thing we really need a portal for is to manage product content, reporting can be done  elsewhere and no time to build a KB from scratch so will use the existing knowledgebase</p>
+              <p>The only thing we really need a portal for is to manage service content, reporting can be done  elsewhere and no time to build a KB from scratch so will use the existing knowledgebase</p>
               <ul class="in_card">
-                <li>- --> decision to use Umbraco for product content management</li>
-                <li>- <a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs (Excel file)</a></li>
+                <li>--> decision to use Umbraco for service content management</li>
+                <li>- <a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs for the service content management (Excel file)</a></li>
+                <li>- <a href="../files/Enquiry Handling - high level story map (to be used on Wednesday 2808 ).pdf" target="_blank"> Initial storymap for enquiry handling (pdf)</a></li>
             </ul>
         </div>
       </div> 
@@ -302,12 +303,41 @@
   </div>
 </div>
 
+        <!--Research -->
+<div class="demo-card demo-card--step5">
+        <div class="head">
+          <div class="number-box">
+            <span>11</span>
+          </div>
+          <h2><span class="small">28 August 2019</span>Workshop with partners</h2>
+        </div>
+        <div class="body">
+              <strong>Focus</strong>
+             <ul class="in_card">
+              <li>- Refine the needs and agree consistent process for enquiry handling (all day in Stirling) + follow up Skype calls</li>
+              <li>- Refine the service content needs with the SEP content designer </li>
+              <li>- workshop with EFRS to assess Knowledge Base needs for them</li>
+            </ul>
+                <br>
+              <strong>Insights - refined needs</strong>
+              <ul class="in_card">
+                <li>- Agree reporting stop at the point of successful signposting to correct partners</li>
+                <li>- Re-routing if mistake as we do now</li>
+                <li>- BG routing automatically based on postcode</li>
+                <li>- Should ask if trading or not and adjust the form based on this</li>
+                <li>- Could ask for size of business if trading</li>
+                <li>- Agreement that we need a unique SLA for all for initial answer</li>
+                <li>- <a href="../files/SEP Partner  Service Content Management  CMS - Storymap - version on 2019-08-29.pdf" target="_blank"> Refined story map for service content management (pdf)</a></li>
+                <li>- <a href="../files/Single entry point - Knowledge base - 2019-08-30.pdf" target="_blank"> Story map for Knowledge base needs (pdf)</a></li>
+            </ul>
+        </div>
+      </div>
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>08</span>
+      <span>12</span>
     </div>
     <h2><span class="small">10 Sep 2019</span>Online Research</h2>
   </div>
@@ -334,7 +364,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>09</span>
+      <span>13</span>
     </div>
     <h2><span class="small">2 Oct 2019</span>Online Research</h2>
   </div>
@@ -360,7 +390,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>10</span>
+      <span>14</span>
     </div>
     <h2><span class="small">7 Oct 2019</span>Online Research</h2>
   </div>
@@ -386,7 +416,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>11</span>
+      <span>15</span>
     </div>
     <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
@@ -413,7 +443,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>12</span>
+      <span>16</span>
     </div>
     <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
@@ -439,7 +469,7 @@
 <div class="demo-card demo-card--step3">
   <div class="head">
     <div class="number-box">
-      <span>13</span>
+      <span>17</span>
     </div>
     <h2><span class="small">29 Oct 2019</span>Lab Research</h2>
   </div>
@@ -475,7 +505,7 @@
 <div class="demo-card demo-card--step2">
   <div class="head">
     <div class="number-box">
-      <span>14</span>
+      <span>18</span>
     </div>
     <h2><span class="small">30 Oct  2019</span>F2F Research at Event</h2>
   </div>
