SK Add one more date for Partners research - more to do

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -333,6 +333,33 @@
         </div>
       </div>
 
+             <!--Research -->
+<div class="demo-card demo-card--step5">
+        <div class="head">
+          <div class="number-box">
+            <span>12</span>
+          </div>
+          <h2><span class="small">09 September 2019</span>Workshop with partners</h2>
+        </div>
+        <div class="body">
+              <strong>Focus</strong>
+             <ul class="in_card">
+              <li>- Co Design the Service Content Management System (Umbraco) and assess the access level needed</li>
+              <li>- Discuss the service content life cycle </li>
+              <li>- Create two new persona (content manager and Enquiry Handler) based on the needs of the partners and the person in these roles in the SEP delivery team</li>
+        
+            </ul>
+                <br>
+              <strong>Personas and refined storymap</strong>
+              <ul class="in_card">
+                <li>- <a href="../files/SEP Partner  Service Content Management  CMS - Storymap - version on 2019-09-10.pdf" target="_blank"> Refined story map for service content management (pdf)</a></li>
+                <li>- <a href="../files/persona-Al-content.PNG" target="_blank"> Persona - internal staff - Content management</a></li>
+                <li>- <a href="../files/persona-Jo-enquiry-handling.PNGf" target="_blank"> Persona - internal staff - Enquiry Handler</a></li>
+            </ul>
+        </div>
+      </div>
+  
+  
 <!--Research -->
 <div class="demo-card demo-card--step4">
   <div class="head">
