SK fix typo in file name

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -354,7 +354,7 @@
               <ul class="in_card">
                 <li>- <a href="../files/SEP Partner  Service Content Management  CMS - Storymap - version on 2019-09-10.pdf" target="_blank"> Refined story map for service content management (pdf)</a></li>
                 <li>- <a href="../files/persona-Al-content.PNG" target="_blank"> Persona - internal staff - Content management</a></li>
-                <li>- <a href="../files/persona-Jo-enquiry-handling.PNGf" target="_blank"> Persona - internal staff - Enquiry Handler</a></li>
+                <li>- <a href="../files/persona-Jo-enquiry-handling.PNG" target="_blank"> Persona - internal staff - Enquiry Handler</a></li>
             </ul>
         </div>
       </div>
