SK reduce title of one section

--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -417,9 +417,10 @@
     <div class="number-box">
       <span>15</span>
     </div>
-    <h2><span class="small">Week starting 24 Sep 2019</span>Contacts with Visit Scotland and Interface - Workshop on Knowledge base</h2>
+    <h2><span class="small">Week starting 24 Sep 2019</span>New Partners + EFFRS workshop</h2>
   </div>
   <div class="body">
+    <p>Contacts with Visit Scotland and Interface - Workshop on Knowledge base</p>
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- Assessing the way to work so the new partners can receive their enquiries in their CRM</li>
@@ -585,7 +586,7 @@
   
 
 <!--Research -->
-<div class="demo-card demo-card--step4">
+<div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
       <span>21</span>
