--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -417,7 +417,7 @@
     <div class="number-box">
       <span>15</span>
     </div>
-    <h2><span class="small">Week starting 24 Sep 2019</span>New Partners + EFFRS workshop</h2>
+    <h2><span class="small">Week starting 24 Sep 2019</span>New Partners + EFRS workshop</h2>
   </div>
   <div class="body">
     <p>Contacts with Visit Scotland and Interface - Workshop on Knowledge base</p>
