--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -607,6 +607,10 @@
         <li>- </li>
         <li>- </li>
         <li>- </li>
+
+        <br>
+        <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pptx" target="_blank">Findings Report Nov 1st</a></li>
+
       </ul>
   </div>
 </div>
