--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -549,7 +549,7 @@
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
         <li>- </li>        
 
-        <li><a href="../files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
+        <li><a href="../files/SEP_2019_Oct_28_CustomerUAT" target="_blank">Findings Report</a></li>
       </ul>
   </div>
 </div>
@@ -581,7 +581,7 @@
         <li class="issue">- Issue: It is not being obvious when a link is jumping off to another website</li>          
         <li class="issue">- Issue: The grey footer was modestly criticised, (only on the homepage), but only in the absence of anything serious to point out</li>
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
-        <li>- The site was so clean that it did not raise any Cognitive Issue Specific problems apart from  inor content alterations that could be made. These centered around "Giving the reasons behind strong statements made on pages". This could be shortened to "Tell me why..."  </li>
+
         <br>
         <li><a href="../files/SEP-Usability.pptx" target="_blank">Findings Report</a></li>
       </ul>
@@ -603,14 +603,14 @@
        <ul class="in_card">
         <li>- Testing SEP with customer experiencing Cognitive Issues</li>
         <li>- Customer UAT - End to End testing</li>
-        <li>- </li>
+
       </ul>
           <br><strong>Observations</strong>
       
       <ul class="in_card">
-        <li>- Issue around not opening a new tab when clicking on a Service/Product. It currently DOES open a new tab for Events</li>
-        <li>- Issue around not being obvious when a link is jumping off to another website</li>          
-
+        <li class="issue">- Issue around not opening a new tab when clicking on a Service/Product. It currently DOES open a new tab for Events</li>
+        <li class="issue">- Issue around not being obvious when a link is jumping off to another website</li>          
+        <li>- The site was so clean that it did not raise any Cognitive Issue Specific problems apart from  inor content alterations that could be made. These centered around "Giving the reasons behind strong statements made on pages". This could be shortened to "Tell me why..."  </li>
 
         <br>
         <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pptx" target="_blank">Findings Report Nov 1st</a></li>
