--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -58,7 +58,7 @@
     <div class="number-box">
       <span>02</span>
     </div>
-    <h2><span class="small">15 May 2019</span>Online Research</h2>
+    <h2><span class="small">18 May 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
@@ -133,12 +133,43 @@
         <li>- </li>
         <li>- </li>
 
-        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP_2019_may_27_usability.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
 
+
+
 <!--Research -->
+<div class="demo-card demo-card--step4">
+  <div class="head">
+    <div class="number-box">
+      <span>04</span>
+    </div>
+    <h2><span class="small">27 May  2019</span>Online Research</h2>
+  </div>
+  <div class="body">
+        <strong>Focus</strong>
+       <ul class="in_card">
+        <li>- Address Lookup functiionality</li>
+        <li>- </li>
+        <li>- </li>
+      </ul>
+          <br><strong>Observations</strong>
+      
+      <ul class="in_card">
+        <li>- </li>
+        <li>- </li>
+
+        <li>- <a href="../files/SEP_2019_may_31_A11Y_Sprint6_v7.pptx" target="_blank"> Findings</a></li>
+      </ul>
+  </div>
+</div>
+
+
+
+
+<!--Research 2nd Aug -->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
@@ -195,30 +226,31 @@
             </ul>
         </div>
       </div>
+
 <!-- May_31_Research.pptx A11y improvements -->
 
 <!--Research -->
-<div class="demo-card demo-card--step4">
+<div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
       <span>07</span>
     </div>
-    <h2><span class="small">6 Aug 2019</span>Online Research</h2>
+    <h2><span class="small">31st May 2019</span>A11Y Research & Improvements</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
        <ul class="in_card">
-        <li>- SEP Events</li>
+        <li>- A11Y Improvements based on issue sfound during research</li>
         <li>- </li>
         <li>- </li>
       </ul>
           <br><strong>Observations</strong>
       
       <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
+        <li>- Not overly technical fix's</li>
+        <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
 
-        <li>- <a href="../files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+        <li>- <a href="../files/SEP_2019_may_31_A11Y_Sprint6_v7.pptx" target="_blank"> Findings</a></li>
       </ul>
   </div>
 </div>
@@ -589,7 +621,7 @@
 </div>
   
 
-<!--Research -->
+<!--A11y Research -->
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
