--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -173,7 +173,7 @@
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
-      <span>07</span>
+      <span>00</span>
     </div>
     <h2><span class="small">31st May 2019</span>A11Y Research & Improvements</h2>
   </div>
@@ -256,6 +256,32 @@
       </div>
 
 
+
+<!--Research -->
+<div class="demo-card demo-card--step4">
+  <div class="head">
+    <div class="number-box">
+      <span>07</span>
+    </div>
+    <h2><span class="small">6 Aug 2019</span>Online Research</h2>
+  </div>
+  <div class="body">
+        <strong>Focus</strong>
+       <ul class="in_card">
+        <li>- SEP Events</li>
+        <li>- </li>
+        <li>- </li>
+      </ul>
+          <br><strong>Observations</strong>
+      
+      <ul class="in_card">
+        <li>- </li>
+        <li>- </li>
+
+        <li>- <a href=../"files/SEP-Usability.pptx" target="_blank"> Findings</a></li>
+      </ul>
+  </div>
+</div>
 
 
 <!--Research -->
