--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -52,6 +52,42 @@
     </div>
 
 
+
+<!--Research -->
+<div class="demo-card demo-card--step4">
+  <div class="head">
+    <div class="number-box">
+      <span>02</span>
+    </div>
+    <h2><span class="small">8 May 2019</span>Online Research</h2>
+  </div>
+  <div class="body">
+        <strong>Focus</strong>
+       <ul class="in_card">
+        <h3></h3>
+        <li>- Support habits and opinion research</li>
+        <li>- General layout benchmarking Usability Testing</li>
+        <li>- Scored on Impressions, navigation, layout, information & general functionality</li>
+        <li>- Enquiry Testing</li>
+      </ul>
+          <br><strong>Observations</strong>
+      
+      <ul class="in_card">
+        <li>- EARLY DAYS AND A BIT OF A KICKING</li>
+        <li>- GOV.SCOT is good</li>
+        <li>- ISSUE: Main CTA is not prominent enough</li>
+        <li>- ISSUE: Text over picture is not easy enough to read</li>
+        <li>- Issue: Not enough informatiuon density (Too much white space)</li>
+        <li>- Issue: SUPPORT OPTIONS is not well undestood as a term</li>
+        <li>- Eligibility and Costs need to be at top of page</li>
+        <br>
+        <li><a href="../files/SEP_2019_MAY_8_USABILITY.pdf" target="_blank">May 18th Findings</a></li>
+      </ul>
+      
+    <!-- <img src="http://placehold.it/1000x500" alt="Graphic"> -->
+  </div>
+</div>
+
 <!--Research -->
 <div class="demo-card demo-card--step4">
   <div class="head">
