--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -75,10 +75,10 @@
       <ul class="in_card">
         <li>- EARLY DAYS AND A BIT OF A KICKING</li>
         <li>- GOV.SCOT is good</li>
-        <li>- ISSUE: Main CTA is not prominent enough</li>
-        <li>- ISSUE: Text over picture is not easy enough to read</li>
-        <li>- Issue: Not enough informatiuon density (Too much white space)</li>
-        <li>- Issue: SUPPORT OPTIONS is not well undestood as a term</li>
+        <li class="issue">- ISSUE: Main CTA is not prominent enough</li>
+        <li class="issue">- ISSUE: Text over picture is not easy enough to read</li>
+        <li class="issue">- Issue: Not enough informatiuon density (Too much white space)</li>
+        <li class="issue">- Issue: SUPPORT OPTIONS is not well undestood as a term</li>
         <li>- Eligibility and Costs need to be at top of page</li>
         <br>
         <li><a href="../files/SEP_2019_MAY_8_USABILITY.pdf" target="_blank">May 18th Findings</a></li>
