--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -117,7 +117,7 @@
   </div>
 </div>
 
-<!--Lab Research *************************************************************  is this SEP related?   ***********-->
+<!--Lab Research may 22nd-->
 <div class="demo-card demo-card--step3">
   <div class="head">
     <div class="number-box">
@@ -144,9 +144,9 @@
         <li >- Location is teh top requested filter option</li>
         <li >- Company Stage/Size is teh next most requested filter option</li>
         <li class="issue">- Adddress lookup still has issues and needs to be improved</li>
-        <li class="issue">- </li>
+        <li class="issue">- Search is not returning partial matches from incomplete strings (Scot should find Scottish)</li>
         <br>
-        <li><a href="research/SEP_2019_may_22_usability.pptx" target="_blank">May 22nd Findings</a></li>
+        <li><a href="../files/SEP_2019_may_22_usability.pptx" target="_blank">May 22nd Findings</a></li>
       </ul>
   </div>
 </div>
