--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -721,7 +721,7 @@
         <li>- The site was so clean that it did not raise any Cognitive Issue Specific problems apart from  inor content alterations that could be made. These centered around "Giving the reasons behind strong statements made on pages". This could be shortened to "Tell me why..."  </li>
 
         <br>
-        <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pptx" target="_blank">Findings Report Nov 1st</a></li>
+        <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pdf" target="_blank">Findings Report Nov 1st</a></li>
 
       </ul>
   </div>
