--- a/pages/SEPtimeline.html
+++ b/pages/SEPtimeline.html
@@ -630,7 +630,7 @@
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
         <li>- </li>        
 
-        <li><a href="../files/SEP_2019_Oct_29_CustomerUAT.pdf" target="_blank">XXXXX</a></li>
+        <li><a href="../files/SEP_2019_Oct_29_CustomerUAT.pdf" target="_blank">Oct 28th 2019 Findings Report</a></li>
       </ul>
   </div>
 </div>
